<resources>
    <string name="DatingApp"></string>
    <string name="submit">Submit</string>
    <string name="textView">TextView</string>
    <string name="signupapp">DatingApp!</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_age">Enter your age</string>
    <string name="enter_description">Something about you</string>
    <string name="enter_occupation">Enter your occupation</string>
    <string name="credentials">credentials</string>
    <string name="enter_dob">enter your date of birth</string>
    <string name="welcomeToDating">Welcome to Online Dating</string>
    <string name="displayMessage">Profile created successfully!</string>
    <string name="go_back">Go Back</string>
    <string name="item_title">Title</string>
    <string name="item_desc">my description</string>
    <string name="appbar_scrolling_view_behavior">\"\"</string>
    <string name="app_name">Dating App</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="network_provider_started_running">Network provider started running</string>
    <string name="profilename">Profile</string>
    <string name="matches_name">Matches</string>
    <string name="settings_name">Settings</string>
    <string name="Profile">Profile</string>
    <string name="Matches">Matches</string>
    <string name="Settings">Settings</string>
    <string name="date_picker">date picker</string>
    <string name="not_18">Not 18</string>
    <string name="cannot_be_empty">Name cannot be empty</string>
    <string name="invalid_email">invalid email</string>
    <string name="age_cannot_be_empty">age cannot be empty</string>
    <string name="description_cannot_be_empty">description cannot be empty</string>
    <string name="occupation_cannot_be_empty">occupation cannot be empty</string>
    <string name="datofbirth_cannot_be_empty">dateOfBirth cannot be empty</string>
    <string name="you_liked">You liked\u0020 </string>
    <string name="Name1">Name: </string>
    <string name="Age1">Age: </string>
    <string name="Email1">Email: </string>
    <string name="Description1">Description: </string>
    <string name="Occupation1">Occupation: </string>
    <string name="Dateofbirth1">Date Of Birth: </string>


</resources>

